    FIXED: terminal emulator has no focus after toggling it on
    FIXED: preserve dates doesn't copy the dates of folders

1.70.0-beta2 Afterburner
========================
    ADDED: you can now cancel creating and verifying checksums
    ADDED: a (missing) shortcut to bookmark current item (ctrl-shift-d)
    ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
    ADDED: you can turn off sending CDs to the terminal emulator (general tab)
    ADDED: unpacking from RPM packages (much faster than using krarc)

  CHANGED: our write-enabled tar KIO-slave is only build when --with-kiotar is passed
           to ./configure. In this case the KDE-version will may be overwritten!

    FIXED: [ 1345220 ] bookmarks: separators shown as folders
    FIXED: new viewer tabs were sometimes added to windows different from the previously used ones
    FIXED: [ 1323613 ] SECURITY!!! PopularUrls stores cleartext passwords in krusaderrc
    FIXED: [ 1329044 ] krarc, missed similar file names belonging to different rpm-s
    FIXED: krarc doesn't notice the change of the rpm file to create new contents.cpio
    FIXED: iso protocol cannot step into files larger than 2 GByte
    FIXED: KDE 3.4, starting from profile misses the active tab which causes inconsistent state
    FIXED: krarc reports 000 permission for bz2 files
    FIXED: bug in checksum module regarding names with spaces
    FIXED: konfigurator minor fixes
    FIXED: viewer, the tabs were identified by its page index, which can change
    FIXED: searcher: space means logical OR "text1 text2" == "*text1* || *text2*"
    FIXED: krarc cannot step into those archives which name contains '#'
    FIXED: viewer doesn't warning to save the window at close, and ignores "Cancel" button
    FIXED: locate dialog doesn't close when exiting krusader
    FIXED: UserAction: Crash when a programm wrote to stderr but only stdout was collected
           (Thanks to Shao Lo)