@@ -1,3 +1,5 @@
+    FIXED: terminal emulator saves its size from now
+    FIXED: hiding the full size terminal emulator cannot restore the panels
     FIXED: terminal emulator has no focus after toggling it on
     FIXED: preserve dates doesn't copy the dates of folders
 
